@@ -1,27 +1,30 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.action;
 
-import org.elasticsearch.action.admin.cluster.node.info.NodesInfoAction;
 import org.elasticsearch.action.admin.cluster.node.info.TransportNodesInfoAction;
+import org.elasticsearch.action.bulk.IncrementalBulkService;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.TransportAction;
 import org.elasticsearch.client.internal.node.NodeClient;
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.cluster.project.TestProjectResolvers;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.settings.ClusterSettings;
-import org.elasticsearch.common.settings.IndexScopedSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.settings.SettingsFilter;
 import org.elasticsearch.common.settings.SettingsModule;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.env.Environment;
+import org.elasticsearch.env.TestEnvironment;
+import org.elasticsearch.features.NodeFeature;
 import org.elasticsearch.indices.TestIndexNameExpressionResolver;
 import org.elasticsearch.indices.breaker.CircuitBreakerService;
 import org.elasticsearch.plugins.ActionPlugin;
@@ -31,22 +34,26 @@ import org.elasticsearch.plugins.internal.RestExtension;
 import org.elasticsearch.rest.RestChannel;
 import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestHandler;
+import org.elasticsearch.rest.RestInterceptor;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.action.admin.cluster.RestNodesInfoAction;
+import org.elasticsearch.search.crossproject.CrossProjectModeDecider;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.tasks.TaskManager;
+import org.elasticsearch.telemetry.TelemetryProvider;
+import org.elasticsearch.telemetry.metric.MeterRegistry;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.threadpool.TestThreadPool;
 import org.elasticsearch.threadpool.ThreadPool;
-import org.elasticsearch.tracing.Tracer;
 import org.elasticsearch.usage.UsageService;
 import org.hamcrest.Matchers;
+import org.junit.Before;
 
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.function.UnaryOperator;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
@@ -56,26 +63,34 @@ import static org.hamcrest.Matchers.startsWith;
 import static org.mockito.Mockito.mock;
 
 public class ActionModuleTests extends ESTestCase {
+    Environment testEnv;
+
+    @Before
+    public void setupEnv() {
+        Settings settings = Settings.builder().put("path.home", createTempDir()).build();
+        testEnv = TestEnvironment.newEnvironment(settings);
+    }
+
     public void testSetupActionsContainsKnownBuiltin() {
         assertThat(
-            ActionModule.setupActions(emptyList()),
-            hasEntry(NodesInfoAction.INSTANCE.name(), new ActionHandler<>(NodesInfoAction.INSTANCE, TransportNodesInfoAction.class))
+            ActionModule.setupActions(testEnv, emptyList()),
+            hasEntry(TransportNodesInfoAction.TYPE.name(), new ActionHandler(TransportNodesInfoAction.TYPE, TransportNodesInfoAction.class))
         );
     }
 
     public void testPluginCantOverwriteBuiltinAction() {
         ActionPlugin dupsMainAction = new ActionPlugin() {
             @Override
-            public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-                return singletonList(new ActionHandler<>(NodesInfoAction.INSTANCE, TransportNodesInfoAction.class));
+            public List<ActionHandler> getActions() {
+                return singletonList(new ActionHandler(TransportNodesInfoAction.TYPE, TransportNodesInfoAction.class));
             }
         };
-        Exception e = expectThrows(IllegalArgumentException.class, () -> ActionModule.setupActions(singletonList(dupsMainAction)));
-        assertEquals("action for name [" + NodesInfoAction.NAME + "] already registered", e.getMessage());
+        Exception e = expectThrows(IllegalArgumentException.class, () -> ActionModule.setupActions(testEnv, singletonList(dupsMainAction)));
+        assertEquals("action for name [" + TransportNodesInfoAction.TYPE.name() + "] already registered", e.getMessage());
     }
 
     public void testPluginCanRegisterAction() {
-        class FakeRequest extends ActionRequest {
+        class FakeRequest extends LegacyActionRequest {
             @Override
             public ActionRequestValidationException validate() {
                 return null;
@@ -83,27 +98,22 @@ public class ActionModuleTests extends ESTestCase {
         }
         class FakeTransportAction extends TransportAction<FakeRequest, ActionResponse> {
             protected FakeTransportAction(String actionName, ActionFilters actionFilters, TaskManager taskManager) {
-                super(actionName, actionFilters, taskManager);
+                super(actionName, actionFilters, taskManager, EsExecutors.DIRECT_EXECUTOR_SERVICE);
             }
 
             @Override
             protected void doExecute(Task task, FakeRequest request, ActionListener<ActionResponse> listener) {}
         }
-        class FakeAction extends ActionType<ActionResponse> {
-            protected FakeAction() {
-                super("fake", null);
-            }
-        }
-        FakeAction action = new FakeAction();
+        final var action = new ActionType<>("fake");
         ActionPlugin registersFakeAction = new ActionPlugin() {
             @Override
-            public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-                return singletonList(new ActionHandler<>(action, FakeTransportAction.class));
+            public List<ActionHandler> getActions() {
+                return singletonList(new ActionHandler(action, FakeTransportAction.class));
             }
         };
         assertThat(
-            ActionModule.setupActions(singletonList(registersFakeAction)),
-            hasEntry("fake", new ActionHandler<>(action, FakeTransportAction.class))
+            ActionModule.setupActions(testEnv, singletonList(registersFakeAction)),
+            hasEntry("fake", new ActionHandler(action, FakeTransportAction.class))
         );
     }
 
@@ -111,9 +121,8 @@ public class ActionModuleTests extends ESTestCase {
         SettingsModule settings = new SettingsModule(Settings.EMPTY);
         UsageService usageService = new UsageService();
         ActionModule actionModule = new ActionModule(
-            settings.getSettings(),
+            testEnv,
             TestIndexNameExpressionResolver.newInstance(),
-            settings.getIndexScopedSettings(),
             settings.getClusterSettings(),
             settings.getSettingsFilter(),
             null,
@@ -122,12 +131,17 @@ public class ActionModuleTests extends ESTestCase {
             null,
             usageService,
             null,
-            null,
+            TelemetryProvider.NOOP,
             mock(ClusterService.class),
+            null,
             List.of(),
-            RestExtension.allowAll()
+            List.of(),
+            RestExtension.allowAll(),
+            new IncrementalBulkService(null, null, MeterRegistry.NOOP),
+            CrossProjectModeDecider.NOOP,
+            TestProjectResolvers.alwaysThrow()
         );
-        actionModule.initRestHandlers(null);
+        actionModule.initRestHandlers(null, null);
         // At this point the easiest way to confirm that a handler is loaded is to try to register another one on top of it and to fail
         Exception e = expectThrows(
             IllegalArgumentException.class,
@@ -148,13 +162,9 @@ public class ActionModuleTests extends ESTestCase {
         ActionPlugin dupsMainAction = new ActionPlugin() {
             @Override
             public List<RestHandler> getRestHandlers(
-                Settings settings,
-                RestController restController,
-                ClusterSettings clusterSettings,
-                IndexScopedSettings indexScopedSettings,
-                SettingsFilter settingsFilter,
-                IndexNameExpressionResolver indexNameExpressionResolver,
-                Supplier<DiscoveryNodes> nodesInCluster
+                RestHandlersServices restHandlersServices,
+                Supplier<DiscoveryNodes> nodesInCluster,
+                Predicate<NodeFeature> clusterSupportsFeature
             ) {
                 return singletonList(new RestNodesInfoAction(new SettingsFilter(emptyList())) {
 
@@ -171,9 +181,8 @@ public class ActionModuleTests extends ESTestCase {
         try {
             UsageService usageService = new UsageService();
             ActionModule actionModule = new ActionModule(
-                settings.getSettings(),
+                testEnv,
                 TestIndexNameExpressionResolver.newInstance(threadPool.getThreadContext()),
-                settings.getIndexScopedSettings(),
                 settings.getClusterSettings(),
                 settings.getSettingsFilter(),
                 threadPool,
@@ -182,12 +191,17 @@ public class ActionModuleTests extends ESTestCase {
                 null,
                 usageService,
                 null,
-                null,
+                TelemetryProvider.NOOP,
                 mock(ClusterService.class),
+                null,
                 List.of(),
-                RestExtension.allowAll()
+                List.of(),
+                RestExtension.allowAll(),
+                new IncrementalBulkService(null, null, MeterRegistry.NOOP),
+                CrossProjectModeDecider.NOOP,
+                TestProjectResolvers.alwaysThrow()
             );
-            Exception e = expectThrows(IllegalArgumentException.class, () -> actionModule.initRestHandlers(null));
+            Exception e = expectThrows(IllegalArgumentException.class, () -> actionModule.initRestHandlers(null, null));
             assertThat(e.getMessage(), startsWith("Cannot replace existing handler for [/_nodes] for method: GET"));
         } finally {
             threadPool.shutdown();
@@ -207,13 +221,9 @@ public class ActionModuleTests extends ESTestCase {
         ActionPlugin registersFakeHandler = new ActionPlugin() {
             @Override
             public List<RestHandler> getRestHandlers(
-                Settings settings,
-                RestController restController,
-                ClusterSettings clusterSettings,
-                IndexScopedSettings indexScopedSettings,
-                SettingsFilter settingsFilter,
-                IndexNameExpressionResolver indexNameExpressionResolver,
-                Supplier<DiscoveryNodes> nodesInCluster
+                RestHandlersServices restHandlersServices,
+                Supplier<DiscoveryNodes> nodesInCluster,
+                Predicate<NodeFeature> clusterSupportsFeature
             ) {
                 return singletonList(new FakeHandler());
             }
@@ -224,9 +234,8 @@ public class ActionModuleTests extends ESTestCase {
         try {
             UsageService usageService = new UsageService();
             ActionModule actionModule = new ActionModule(
-                settings.getSettings(),
+                testEnv,
                 TestIndexNameExpressionResolver.newInstance(threadPool.getThreadContext()),
-                settings.getIndexScopedSettings(),
                 settings.getClusterSettings(),
                 settings.getSettingsFilter(),
                 threadPool,
@@ -235,12 +244,17 @@ public class ActionModuleTests extends ESTestCase {
                 null,
                 usageService,
                 null,
-                null,
+                TelemetryProvider.NOOP,
                 mock(ClusterService.class),
+                null,
                 List.of(),
-                RestExtension.allowAll()
+                List.of(),
+                RestExtension.allowAll(),
+                new IncrementalBulkService(null, null, MeterRegistry.NOOP),
+                CrossProjectModeDecider.NOOP,
+                TestProjectResolvers.alwaysThrow()
             );
-            actionModule.initRestHandlers(null);
+            actionModule.initRestHandlers(null, null);
             // At this point the easiest way to confirm that a handler is loaded is to try to register another one on top of it and to fail
             Exception e = expectThrows(
                 IllegalArgumentException.class,
@@ -272,9 +286,8 @@ public class ActionModuleTests extends ESTestCase {
             Exception e = expectThrows(
                 IllegalArgumentException.class,
                 () -> new ActionModule(
-                    settingsModule.getSettings(),
+                    testEnv,
                     TestIndexNameExpressionResolver.newInstance(threadPool.getThreadContext()),
-                    settingsModule.getIndexScopedSettings(),
                     settingsModule.getClusterSettings(),
                     settingsModule.getSettingsFilter(),
                     threadPool,
@@ -285,8 +298,13 @@ public class ActionModuleTests extends ESTestCase {
                     null,
                     null,
                     mock(ClusterService.class),
+                    null,
                     List.of(),
-                    RestExtension.allowAll()
+                    List.of(),
+                    RestExtension.allowAll(),
+                    new IncrementalBulkService(null, null, MeterRegistry.NOOP),
+                    CrossProjectModeDecider.NOOP,
+                    TestProjectResolvers.alwaysThrow()
                 )
             );
             assertThat(
@@ -311,21 +329,25 @@ public class ActionModuleTests extends ESTestCase {
             Exception e = expectThrows(
                 IllegalArgumentException.class,
                 () -> new ActionModule(
-                    settingsModule.getSettings(),
+                    testEnv,
                     TestIndexNameExpressionResolver.newInstance(threadPool.getThreadContext()),
-                    settingsModule.getIndexScopedSettings(),
                     settingsModule.getClusterSettings(),
                     settingsModule.getSettingsFilter(),
                     threadPool,
-                    Arrays.asList(secPlugin),
+                    List.of(secPlugin),
                     null,
                     null,
                     usageService,
                     null,
-                    null,
+                    TelemetryProvider.NOOP,
                     mock(ClusterService.class),
+                    null,
                     List.of(),
-                    RestExtension.allowAll()
+                    List.of(),
+                    RestExtension.allowAll(),
+                    new IncrementalBulkService(null, null, MeterRegistry.NOOP),
+                    CrossProjectModeDecider.NOOP,
+                    TestProjectResolvers.alwaysThrow()
                 )
             );
             assertThat(
@@ -360,9 +382,9 @@ public class ActionModuleTests extends ESTestCase {
         }
 
         @Override
-        public UnaryOperator<RestHandler> getRestHandlerInterceptor(ThreadContext threadContext) {
+        public RestInterceptor getRestHandlerInterceptor(ThreadContext threadContext) {
             if (installInterceptor) {
-                return UnaryOperator.identity();
+                return (request, channel, targetHandler, listener) -> listener.onResponse(true);
             } else {
                 return null;
             }
@@ -370,14 +392,14 @@ public class ActionModuleTests extends ESTestCase {
 
         @Override
         public RestController getRestController(
-            UnaryOperator<RestHandler> handlerWrapper,
+            RestInterceptor interceptor,
             NodeClient client,
             CircuitBreakerService circuitBreakerService,
             UsageService usageService,
-            Tracer tracer
+            TelemetryProvider telemetryProvider
         ) {
             if (installController) {
-                return new RestController(handlerWrapper, client, circuitBreakerService, usageService, tracer);
+                return new RestController(interceptor, client, circuitBreakerService, usageService, telemetryProvider);
             } else {
                 return null;
             }
