@@ -6,7 +6,6 @@
  */
 package org.elasticsearch.xpack.core.ilm;
 
-import org.elasticsearch.TransportVersions;
 import org.elasticsearch.action.admin.indices.rollover.RolloverConditions;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.common.Strings;
@@ -22,7 +21,6 @@ import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xpack.core.ilm.Step.StepKey;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -88,16 +86,12 @@ public class RolloverAction implements LifecycleAction {
         builder.addMaxPrimaryShardSizeCondition(in.readOptionalWriteable(ByteSizeValue::readFrom));
         builder.addMaxIndexAgeCondition(in.readOptionalTimeValue());
         builder.addMaxIndexDocsCondition(in.readOptionalVLong());
-        if (in.getTransportVersion().onOrAfter(TransportVersions.V_8_2_0)) {
-            builder.addMaxPrimaryShardDocsCondition(in.readOptionalVLong());
-        }
-        if (in.getTransportVersion().onOrAfter(TransportVersions.V_8_4_0)) {
-            builder.addMinIndexSizeCondition(in.readOptionalWriteable(ByteSizeValue::readFrom));
-            builder.addMinPrimaryShardSizeCondition(in.readOptionalWriteable(ByteSizeValue::readFrom));
-            builder.addMinIndexAgeCondition(in.readOptionalTimeValue());
-            builder.addMinIndexDocsCondition(in.readOptionalVLong());
-            builder.addMinPrimaryShardDocsCondition(in.readOptionalVLong());
-        }
+        builder.addMaxPrimaryShardDocsCondition(in.readOptionalVLong());
+        builder.addMinIndexSizeCondition(in.readOptionalWriteable(ByteSizeValue::readFrom));
+        builder.addMinPrimaryShardSizeCondition(in.readOptionalWriteable(ByteSizeValue::readFrom));
+        builder.addMinIndexAgeCondition(in.readOptionalTimeValue());
+        builder.addMinIndexDocsCondition(in.readOptionalVLong());
+        builder.addMinPrimaryShardDocsCondition(in.readOptionalVLong());
         return new RolloverAction(builder.build());
     }
 
@@ -106,24 +100,13 @@ public class RolloverAction implements LifecycleAction {
         out.writeOptionalWriteable(conditions.getMaxSize());
         out.writeOptionalWriteable(conditions.getMaxPrimaryShardSize());
         out.writeOptionalTimeValue(conditions.getMaxAge());
-        if (out.getTransportVersion().onOrAfter(TransportVersions.V_8_2_0)) {
-            out.writeOptionalVLong(conditions.getMaxDocs());
-            out.writeOptionalVLong(conditions.getMaxPrimaryShardDocs());
-        } else {
-            // With an older version and if maxDocs is empty, we use maxPrimaryShardDocs in its place.
-            if (conditions.getMaxDocs() == null) {
-                out.writeOptionalVLong(conditions.getMaxPrimaryShardDocs());
-            } else {
-                out.writeOptionalVLong(conditions.getMaxDocs());
-            }
-        }
-        if (out.getTransportVersion().onOrAfter(TransportVersions.V_8_4_0)) {
-            out.writeOptionalWriteable(conditions.getMinSize());
-            out.writeOptionalWriteable(conditions.getMinPrimaryShardSize());
-            out.writeOptionalTimeValue(conditions.getMinAge());
-            out.writeOptionalVLong(conditions.getMinDocs());
-            out.writeOptionalVLong(conditions.getMinPrimaryShardDocs());
-        }
+        out.writeOptionalVLong(conditions.getMaxDocs());
+        out.writeOptionalVLong(conditions.getMaxPrimaryShardDocs());
+        out.writeOptionalWriteable(conditions.getMinSize());
+        out.writeOptionalWriteable(conditions.getMinPrimaryShardSize());
+        out.writeOptionalTimeValue(conditions.getMinAge());
+        out.writeOptionalVLong(conditions.getMinDocs());
+        out.writeOptionalVLong(conditions.getMinPrimaryShardDocs());
     }
 
     @Override
@@ -172,7 +155,7 @@ public class RolloverAction implements LifecycleAction {
             client,
             INDEXING_COMPLETE
         );
-        return Arrays.asList(waitForRolloverReadyStep, rolloverStep, waitForActiveShardsStep, updateDateStep, setIndexingCompleteStep);
+        return List.of(waitForRolloverReadyStep, rolloverStep, waitForActiveShardsStep, updateDateStep, setIndexingCompleteStep);
     }
 
     @Override
