@@ -7,17 +7,15 @@
 package org.elasticsearch.xpack.core.ilm;
 
 import org.elasticsearch.action.admin.indices.rollover.RolloverInfo;
-import org.elasticsearch.cluster.ClusterName;
-import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.ProjectState;
 import org.elasticsearch.cluster.metadata.AliasMetadata;
 import org.elasticsearch.cluster.metadata.DataStream;
 import org.elasticsearch.cluster.metadata.DataStreamTestHelper;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
-import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.xpack.core.ilm.Step.StepKey;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.function.LongSupplier;
 
@@ -68,17 +66,17 @@ public class UpdateRolloverLifecycleDateStepTests extends AbstractStepTestCase<U
             .numberOfReplicas(randomIntBetween(0, 5))
             .build();
         IndexMetadata indexMetadata = IndexMetadata.builder(randomAlphaOfLength(10))
-            .putRolloverInfo(new RolloverInfo(alias, Collections.emptyList(), rolloverTime))
+            .putRolloverInfo(new RolloverInfo(alias, List.of(), rolloverTime))
             .settings(settings(IndexVersion.current()).put(RolloverAction.LIFECYCLE_ROLLOVER_ALIAS, alias))
             .numberOfShards(randomIntBetween(1, 5))
             .numberOfReplicas(randomIntBetween(0, 5))
             .build();
-        ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
-            .metadata(Metadata.builder().put(indexMetadata, false).put(newIndexMetadata, false))
-            .build();
+        ProjectState state = projectStateFromProject(
+            ProjectMetadata.builder(randomProjectIdOrDefault()).put(indexMetadata, false).put(newIndexMetadata, false)
+        );
 
         UpdateRolloverLifecycleDateStep step = createRandomInstance();
-        ClusterState newState = step.performAction(indexMetadata.getIndex(), clusterState);
+        ProjectState newState = step.performAction(indexMetadata.getIndex(), state);
         long actualRolloverTime = newState.metadata().index(indexMetadata.getIndex()).getLifecycleExecutionState().lifecycleDate();
         assertThat(actualRolloverTime, equalTo(rolloverTime));
     }
@@ -88,7 +86,7 @@ public class UpdateRolloverLifecycleDateStepTests extends AbstractStepTestCase<U
         long rolloverTime = randomValueOtherThan(creationDate, () -> randomNonNegativeLong());
         String dataStreamName = "test-datastream";
         IndexMetadata originalIndexMeta = IndexMetadata.builder(DataStream.getDefaultBackingIndexName(dataStreamName, 1))
-            .putRolloverInfo(new RolloverInfo(dataStreamName, Collections.emptyList(), rolloverTime))
+            .putRolloverInfo(new RolloverInfo(dataStreamName, List.of(), rolloverTime))
             .settings(settings(IndexVersion.current()))
             .numberOfShards(randomIntBetween(1, 5))
             .numberOfReplicas(randomIntBetween(0, 5))
@@ -100,19 +98,15 @@ public class UpdateRolloverLifecycleDateStepTests extends AbstractStepTestCase<U
             .numberOfReplicas(randomIntBetween(0, 5))
             .build();
 
-        ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
-            .metadata(
-                Metadata.builder()
-                    .put(
-                        DataStreamTestHelper.newInstance(dataStreamName, List.of(originalIndexMeta.getIndex(), rolledIndexMeta.getIndex()))
-                    )
-                    .put(originalIndexMeta, true)
-                    .put(rolledIndexMeta, true)
-            )
-            .build();
+        ProjectState state = projectStateFromProject(
+            ProjectMetadata.builder(randomProjectIdOrDefault())
+                .put(DataStreamTestHelper.newInstance(dataStreamName, List.of(originalIndexMeta.getIndex(), rolledIndexMeta.getIndex())))
+                .put(originalIndexMeta, true)
+                .put(rolledIndexMeta, true)
+        );
 
         UpdateRolloverLifecycleDateStep step = createRandomInstance();
-        ClusterState newState = step.performAction(originalIndexMeta.getIndex(), clusterState);
+        ProjectState newState = step.performAction(originalIndexMeta.getIndex(), state);
         long actualRolloverTime = newState.metadata().index(originalIndexMeta.getIndex()).getLifecycleExecutionState().lifecycleDate();
         assertThat(actualRolloverTime, equalTo(rolloverTime));
     }
@@ -127,14 +121,12 @@ public class UpdateRolloverLifecycleDateStepTests extends AbstractStepTestCase<U
             .numberOfShards(randomIntBetween(1, 5))
             .numberOfReplicas(randomIntBetween(0, 5))
             .build();
-        ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
-            .metadata(Metadata.builder().put(indexMetadata, false))
-            .build();
+        ProjectState state = projectStateFromProject(ProjectMetadata.builder(randomProjectIdOrDefault()).put(indexMetadata, false));
         UpdateRolloverLifecycleDateStep step = createRandomInstance();
 
         IllegalStateException exceptionThrown = expectThrows(
             IllegalStateException.class,
-            () -> step.performAction(indexMetadata.getIndex(), clusterState)
+            () -> step.performAction(indexMetadata.getIndex(), state)
         );
         assertThat(
             exceptionThrown.getMessage(),
@@ -157,14 +149,12 @@ public class UpdateRolloverLifecycleDateStepTests extends AbstractStepTestCase<U
             .numberOfShards(randomIntBetween(1, 5))
             .numberOfReplicas(randomIntBetween(0, 5))
             .build();
-        ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
-            .metadata(Metadata.builder().put(indexMetadata, false))
-            .build();
+        ProjectState state = projectStateFromProject(ProjectMetadata.builder(randomProjectIdOrDefault()).put(indexMetadata, false));
         UpdateRolloverLifecycleDateStep step = createRandomInstance();
 
         IllegalStateException exceptionThrown = expectThrows(
             IllegalStateException.class,
-            () -> step.performAction(indexMetadata.getIndex(), clusterState)
+            () -> step.performAction(indexMetadata.getIndex(), state)
         );
         assertThat(
             exceptionThrown.getMessage(),
@@ -185,12 +175,10 @@ public class UpdateRolloverLifecycleDateStepTests extends AbstractStepTestCase<U
             .numberOfShards(randomIntBetween(1, 5))
             .numberOfReplicas(randomIntBetween(0, 5))
             .build();
-        ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT)
-            .metadata(Metadata.builder().put(indexMetadata, false))
-            .build();
+        ProjectState state = projectStateFromProject(ProjectMetadata.builder(randomProjectIdOrDefault()).put(indexMetadata, false));
 
         UpdateRolloverLifecycleDateStep step = createRandomInstanceWithFallbackTime(() -> rolloverTime);
-        ClusterState newState = step.performAction(indexMetadata.getIndex(), clusterState);
+        ProjectState newState = step.performAction(indexMetadata.getIndex(), state);
         long actualRolloverTime = newState.metadata().index(indexMetadata.getIndex()).getLifecycleExecutionState().lifecycleDate();
         assertThat(actualRolloverTime, equalTo(rolloverTime));
     }
