@@ -16,57 +16,24 @@ import org.elasticsearch.search.aggregations.Aggregation;
 import org.elasticsearch.search.aggregations.AggregationBuilder;
 import org.elasticsearch.search.aggregations.AggregationBuilders;
 import org.elasticsearch.search.aggregations.AggregationReduceContext;
+import org.elasticsearch.search.aggregations.AggregatorReducer;
 import org.elasticsearch.search.aggregations.InternalAggregation;
 import org.elasticsearch.search.aggregations.InternalAggregations;
 import org.elasticsearch.search.aggregations.PipelineAggregationBuilder;
 import org.elasticsearch.search.aggregations.PipelineAggregatorBuilders;
-import org.elasticsearch.search.aggregations.bucket.SingleBucketAggregation;
-import org.elasticsearch.search.aggregations.bucket.composite.CompositeAggregation;
-import org.elasticsearch.search.aggregations.bucket.composite.ParsedComposite;
+import org.elasticsearch.search.aggregations.bucket.InternalSingleBucketAggregation;
+import org.elasticsearch.search.aggregations.bucket.composite.InternalComposite;
 import org.elasticsearch.search.aggregations.bucket.range.InternalRange;
 import org.elasticsearch.search.aggregations.bucket.range.Range;
-import org.elasticsearch.search.aggregations.bucket.terms.DoubleTerms;
-import org.elasticsearch.search.aggregations.bucket.terms.LongTerms;
-import org.elasticsearch.search.aggregations.bucket.terms.ParsedDoubleTerms;
-import org.elasticsearch.search.aggregations.bucket.terms.ParsedLongTerms;
-import org.elasticsearch.search.aggregations.bucket.terms.ParsedStringTerms;
-import org.elasticsearch.search.aggregations.bucket.terms.StringTerms;
-import org.elasticsearch.search.aggregations.metrics.AvgAggregationBuilder;
-import org.elasticsearch.search.aggregations.metrics.CardinalityAggregationBuilder;
-import org.elasticsearch.search.aggregations.metrics.ExtendedStatsAggregationBuilder;
 import org.elasticsearch.search.aggregations.metrics.GeoBounds;
 import org.elasticsearch.search.aggregations.metrics.GeoCentroid;
 import org.elasticsearch.search.aggregations.metrics.InternalMultiValueAggregation;
 import org.elasticsearch.search.aggregations.metrics.InternalNumericMetricsAggregation;
-import org.elasticsearch.search.aggregations.metrics.MaxAggregationBuilder;
-import org.elasticsearch.search.aggregations.metrics.MinAggregationBuilder;
-import org.elasticsearch.search.aggregations.metrics.NumericMetricsAggregation;
-import org.elasticsearch.search.aggregations.metrics.ParsedAvg;
-import org.elasticsearch.search.aggregations.metrics.ParsedCardinality;
-import org.elasticsearch.search.aggregations.metrics.ParsedExtendedStats;
-import org.elasticsearch.search.aggregations.metrics.ParsedMax;
-import org.elasticsearch.search.aggregations.metrics.ParsedMin;
-import org.elasticsearch.search.aggregations.metrics.ParsedScriptedMetric;
-import org.elasticsearch.search.aggregations.metrics.ParsedStats;
-import org.elasticsearch.search.aggregations.metrics.ParsedSum;
-import org.elasticsearch.search.aggregations.metrics.ParsedValueCount;
+import org.elasticsearch.search.aggregations.metrics.InternalScriptedMetric;
 import org.elasticsearch.search.aggregations.metrics.Percentile;
 import org.elasticsearch.search.aggregations.metrics.Percentiles;
-import org.elasticsearch.search.aggregations.metrics.ScriptedMetric;
-import org.elasticsearch.search.aggregations.metrics.ScriptedMetricAggregationBuilder;
-import org.elasticsearch.search.aggregations.metrics.StatsAggregationBuilder;
-import org.elasticsearch.search.aggregations.metrics.SumAggregationBuilder;
-import org.elasticsearch.search.aggregations.metrics.ValueCountAggregationBuilder;
-import org.elasticsearch.search.aggregations.pipeline.BucketScriptPipelineAggregationBuilder;
-import org.elasticsearch.search.aggregations.pipeline.ParsedSimpleValue;
-import org.elasticsearch.search.aggregations.pipeline.ParsedStatsBucket;
-import org.elasticsearch.search.aggregations.pipeline.StatsBucketPipelineAggregationBuilder;
 import org.elasticsearch.test.ESTestCase;
-import org.elasticsearch.xcontent.ContextParser;
-import org.elasticsearch.xcontent.NamedXContentRegistry;
-import org.elasticsearch.xcontent.ParseField;
 import org.elasticsearch.xcontent.XContentBuilder;
-import org.elasticsearch.xcontent.XContentFactory;
 import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentParserConfiguration;
 import org.elasticsearch.xcontent.XContentType;
@@ -75,19 +42,20 @@ import org.elasticsearch.xpack.core.transform.transforms.TransformIndexerStats;
 import org.elasticsearch.xpack.core.transform.transforms.TransformProgress;
 import org.elasticsearch.xpack.core.transform.transforms.pivot.GroupConfig;
 import org.elasticsearch.xpack.transform.transforms.pivot.AggregationResultUtils.BucketKeyExtractor;
+import org.hamcrest.BaseMatcher;
+import org.hamcrest.Description;
+import org.hamcrest.Matcher;
 
 import java.io.IOException;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.emptyMap;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.hasItem;
 import static org.hamcrest.CoreMatchers.is;
@@ -97,42 +65,12 @@ import static org.mockito.Mockito.when;
 
 public class AggregationResultUtilsTests extends ESTestCase {
 
-    private final NamedXContentRegistry namedXContentRegistry = new NamedXContentRegistry(namedXContents);
-
-    private final String KEY = Aggregation.CommonFields.KEY.getPreferredName();
-    private final String DOC_COUNT = Aggregation.CommonFields.DOC_COUNT.getPreferredName();
-
-    // aggregations potentially useful for writing tests, to be expanded as necessary
-    private static final List<NamedXContentRegistry.Entry> namedXContents;
-    static {
-        Map<String, ContextParser<Object, ? extends Aggregation>> map = new HashMap<>();
-        map.put(CardinalityAggregationBuilder.NAME, (p, c) -> ParsedCardinality.fromXContent(p, (String) c));
-        map.put(MinAggregationBuilder.NAME, (p, c) -> ParsedMin.fromXContent(p, (String) c));
-        map.put(MaxAggregationBuilder.NAME, (p, c) -> ParsedMax.fromXContent(p, (String) c));
-        map.put(SumAggregationBuilder.NAME, (p, c) -> ParsedSum.fromXContent(p, (String) c));
-        map.put(AvgAggregationBuilder.NAME, (p, c) -> ParsedAvg.fromXContent(p, (String) c));
-        map.put(BucketScriptPipelineAggregationBuilder.NAME, (p, c) -> ParsedSimpleValue.fromXContent(p, (String) c));
-        map.put(ScriptedMetricAggregationBuilder.NAME, (p, c) -> ParsedScriptedMetric.fromXContent(p, (String) c));
-        map.put(ValueCountAggregationBuilder.NAME, (p, c) -> ParsedValueCount.fromXContent(p, (String) c));
-        map.put(StatsAggregationBuilder.NAME, (p, c) -> ParsedStats.fromXContent(p, (String) c));
-        map.put(StatsBucketPipelineAggregationBuilder.NAME, (p, c) -> ParsedStatsBucket.fromXContent(p, (String) c));
-        map.put(ExtendedStatsAggregationBuilder.NAME, (p, c) -> ParsedExtendedStats.fromXContent(p, (String) c));
-        map.put(StringTerms.NAME, (p, c) -> ParsedStringTerms.fromXContent(p, (String) c));
-        map.put(LongTerms.NAME, (p, c) -> ParsedLongTerms.fromXContent(p, (String) c));
-        map.put(DoubleTerms.NAME, (p, c) -> ParsedDoubleTerms.fromXContent(p, (String) c));
-
-        namedXContents = map.entrySet()
-            .stream()
-            .map(entry -> new NamedXContentRegistry.Entry(Aggregation.class, new ParseField(entry.getKey()), entry.getValue()))
-            .collect(Collectors.toList());
-    }
-
     class TestMultiValueAggregation extends InternalMultiValueAggregation {
 
         private final Map<String, String> values;
 
         TestMultiValueAggregation(String name, Map<String, String> values) {
-            super(name, emptyMap());
+            super(name, Map.of());
             this.values = values;
         }
 
@@ -143,7 +81,7 @@ public class AggregationResultUtilsTests extends ESTestCase {
 
         @Override
         public List<String> getValuesAsStrings(String name) {
-            return Collections.singletonList(values.get(name).toString());
+            return List.of(values.get(name));
         }
 
         @Override
@@ -152,7 +90,7 @@ public class AggregationResultUtilsTests extends ESTestCase {
         }
 
         @Override
-        public InternalAggregation reduce(List<InternalAggregation> aggregations, AggregationReduceContext reduceContext) {
+        protected AggregatorReducer getLeaderReducer(AggregationReduceContext reduceContext, int size) {
             throw new UnsupportedOperationException();
         }
 
@@ -182,7 +120,7 @@ public class AggregationResultUtilsTests extends ESTestCase {
         private final Map<String, Double> values;
 
         TestNumericMultiValueAggregation(String name, Map<String, Double> values) {
-            super(name, null, emptyMap());
+            super(name, null, Map.of());
             this.values = values;
         }
 
@@ -202,7 +140,7 @@ public class AggregationResultUtilsTests extends ESTestCase {
         }
 
         @Override
-        public InternalAggregation reduce(List<InternalAggregation> aggregations, AggregationReduceContext reduceContext) {
+        protected AggregatorReducer getLeaderReducer(AggregationReduceContext reduceContext, int size) {
             throw new UnsupportedOperationException();
         }
 
@@ -217,11 +155,6 @@ public class AggregationResultUtilsTests extends ESTestCase {
         }
     }
 
-    @Override
-    protected NamedXContentRegistry xContentRegistry() {
-        return namedXContentRegistry;
-    }
-
     public void testExtractCompositeAggregationResults() throws IOException {
         String targetField = randomAlphaOfLengthBetween(5, 10);
 
@@ -230,25 +163,35 @@ public class AggregationResultUtilsTests extends ESTestCase {
             """, targetField));
 
         String aggName = randomAlphaOfLengthBetween(5, 10);
-        String aggTypedName = "avg#" + aggName;
-        Collection<AggregationBuilder> aggregationBuilders = Collections.singletonList(AggregationBuilders.avg(aggName));
+        List<AggregationBuilder> aggregationBuilders = List.of(AggregationBuilders.avg(aggName));
 
-        Map<String, Object> input = asMap(
-            "buckets",
-            asList(
-                asMap(KEY, asMap(targetField, "ID1"), aggTypedName, asMap("value", 42.33), DOC_COUNT, 8),
-                asMap(KEY, asMap(targetField, "ID2"), aggTypedName, asMap("value", 28.99), DOC_COUNT, 3),
-                asMap(KEY, asMap(targetField, "ID3"), aggTypedName, asMap("value", Double.NaN), DOC_COUNT, 0)
+        InternalComposite input = createComposite(
+            List.of(
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID1"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 42.33))),
+                    8L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 28.99))),
+                    3L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID3"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, Double.NaN))),
+                    0L
+                )
             )
         );
 
-        List<Map<String, Object>> expected = asList(
+        List<Map<String, Object>> expected = List.of(
             asMap(targetField, "ID1", aggName, 42.33),
             asMap(targetField, "ID2", aggName, 28.99),
             asMap(targetField, "ID3", aggName, null)
         );
-        Map<String, String> fieldTypeMap = asStringMap(targetField, "keyword", aggName, "double");
-        executeTest(groupBy, aggregationBuilders, Collections.emptyList(), input, fieldTypeMap, expected, 11);
+        Map<String, String> fieldTypeMap = Map.of(targetField, "keyword", aggName, "double");
+        executeTest(groupBy, aggregationBuilders, List.of(), input, fieldTypeMap, expected, 11);
     }
 
     public void testExtractCompositeAggregationResultsMultipleGroups() throws IOException {
@@ -270,27 +213,41 @@ public class AggregationResultUtilsTests extends ESTestCase {
             }""", targetField, targetField2));
 
         String aggName = randomAlphaOfLengthBetween(5, 10);
-        String aggTypedName = "avg#" + aggName;
-        Collection<AggregationBuilder> aggregationBuilders = Collections.singletonList(AggregationBuilders.avg(aggName));
+        List<AggregationBuilder> aggregationBuilders = List.of(AggregationBuilders.avg(aggName));
 
-        Map<String, Object> input = asMap(
-            "buckets",
-            asList(
-                asMap(KEY, asMap(targetField, "ID1", targetField2, "ID1_2"), aggTypedName, asMap("value", 42.33), DOC_COUNT, 1),
-                asMap(KEY, asMap(targetField, "ID1", targetField2, "ID2_2"), aggTypedName, asMap("value", 8.4), DOC_COUNT, 2),
-                asMap(KEY, asMap(targetField, "ID2", targetField2, "ID1_2"), aggTypedName, asMap("value", 28.99), DOC_COUNT, 3),
-                asMap(KEY, asMap(targetField, "ID3", targetField2, "ID2_2"), aggTypedName, asMap("value", Double.NaN), DOC_COUNT, 0)
+        InternalComposite input = createComposite(
+            List.of(
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID1", targetField2, "ID1_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 42.33))),
+                    1L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID1", targetField2, "ID2_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 8.4))),
+                    2L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID2", targetField2, "ID1_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 28.99))),
+                    3L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID3", targetField2, "ID2_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, Double.NaN))),
+                    0L
+                )
             )
         );
 
-        List<Map<String, Object>> expected = asList(
+        List<Map<String, Object>> expected = List.of(
             asMap(targetField, "ID1", targetField2, "ID1_2", aggName, 42.33),
             asMap(targetField, "ID1", targetField2, "ID2_2", aggName, 8.4),
             asMap(targetField, "ID2", targetField2, "ID1_2", aggName, 28.99),
             asMap(targetField, "ID3", targetField2, "ID2_2", aggName, null)
         );
-        Map<String, String> fieldTypeMap = asStringMap(aggName, "double", targetField, "keyword", targetField2, "keyword");
-        executeTest(groupBy, aggregationBuilders, Collections.emptyList(), input, fieldTypeMap, expected, 6);
+        Map<String, String> fieldTypeMap = Map.of(aggName, "double", targetField, "keyword", targetField2, "keyword");
+        executeTest(groupBy, aggregationBuilders, List.of(), input, fieldTypeMap, expected, 6);
     }
 
     public void testExtractCompositeAggregationResultsMultiAggregations() throws IOException {
@@ -306,56 +263,38 @@ public class AggregationResultUtilsTests extends ESTestCase {
             }""", targetField));
 
         String aggName = randomAlphaOfLengthBetween(5, 10);
-        String aggTypedName = "avg#" + aggName;
 
         String aggName2 = randomAlphaOfLengthBetween(5, 10) + "_2";
-        String aggTypedName2 = "max#" + aggName2;
 
-        Collection<AggregationBuilder> aggregationBuilders = asList(AggregationBuilders.avg(aggName), AggregationBuilders.max(aggName2));
+        List<AggregationBuilder> aggregationBuilders = List.of(AggregationBuilders.avg(aggName), AggregationBuilders.max(aggName2));
 
-        Map<String, Object> input = asMap(
-            "buckets",
-            asList(
-                asMap(
-                    KEY,
+        InternalComposite input = createComposite(
+            List.of(
+                createInternalCompositeBucket(
                     asMap(targetField, "ID1"),
-                    aggTypedName,
-                    asMap("value", 42.33),
-                    aggTypedName2,
-                    asMap("value", 9.9),
-                    DOC_COUNT,
-                    111
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 42.33), createSingleMetricAgg(aggName2, 9.9))),
+                    111L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID2"),
-                    aggTypedName,
-                    asMap("value", 28.99),
-                    aggTypedName2,
-                    asMap("value", 222.33),
-                    DOC_COUNT,
-                    88
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 28.99), createSingleMetricAgg(aggName2, 222.33))),
+                    88L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID3"),
-                    aggTypedName,
-                    asMap("value", 12.55),
-                    aggTypedName2,
-                    asMap("value", Double.NaN),
-                    DOC_COUNT,
-                    1
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 12.55), createSingleMetricAgg(aggName2, Double.NaN))),
+                    1L
                 )
             )
         );
 
-        List<Map<String, Object>> expected = asList(
+        List<Map<String, Object>> expected = List.of(
             asMap(targetField, "ID1", aggName, 42.33, aggName2, 9.9),
             asMap(targetField, "ID2", aggName, 28.99, aggName2, 222.33),
             asMap(targetField, "ID3", aggName, 12.55, aggName2, null)
         );
-        Map<String, String> fieldTypeMap = asStringMap(targetField, "keyword", aggName, "double", aggName2, "double");
-        executeTest(groupBy, aggregationBuilders, Collections.emptyList(), input, fieldTypeMap, expected, 200);
+        Map<String, String> fieldTypeMap = Map.of(targetField, "keyword", aggName, "double", aggName2, "double");
+        executeTest(groupBy, aggregationBuilders, List.of(), input, fieldTypeMap, expected, 200);
     }
 
     public void testExtractCompositeAggregationResultsMultiAggregationsAndTypes() throws IOException {
@@ -377,66 +316,49 @@ public class AggregationResultUtilsTests extends ESTestCase {
             }""", targetField, targetField2));
 
         String aggName = randomAlphaOfLengthBetween(5, 10);
-        String aggTypedName = "avg#" + aggName;
 
         String aggName2 = randomAlphaOfLengthBetween(5, 10) + "_2";
-        String aggTypedName2 = "max#" + aggName2;
 
-        Collection<AggregationBuilder> aggregationBuilders = asList(AggregationBuilders.avg(aggName), AggregationBuilders.max(aggName2));
+        List<AggregationBuilder> aggregationBuilders = List.of(AggregationBuilders.avg(aggName), AggregationBuilders.max(aggName2));
 
-        Map<String, Object> input = asMap(
-            "buckets",
-            asList(
-                asMap(
-                    KEY,
+        InternalComposite input = createComposite(
+            List.of(
+                createInternalCompositeBucket(
                     asMap(targetField, "ID1", targetField2, "ID1_2"),
-                    aggTypedName,
-                    asMap("value", 42.33),
-                    aggTypedName2,
-                    asMap("value", 9.9, "value_as_string", "9.9F"),
-                    DOC_COUNT,
-                    1
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 42.33), createSingleMetricAgg(aggName2, 9.9, "9.9F"))),
+                    1L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID1", targetField2, "ID2_2"),
-                    aggTypedName,
-                    asMap("value", 8.4),
-                    aggTypedName2,
-                    asMap("value", 222.33, "value_as_string", "222.33F"),
-                    DOC_COUNT,
-                    2
+                    InternalAggregations.from(
+                        List.of(createSingleMetricAgg(aggName, 8.4), createSingleMetricAgg(aggName2, 222.33, "222.33F"))
+                    ),
+                    2L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID2", targetField2, "ID1_2"),
-                    aggTypedName,
-                    asMap("value", 28.99),
-                    aggTypedName2,
-                    asMap("value", -2.44, "value_as_string", "-2.44F"),
-                    DOC_COUNT,
-                    3
+                    InternalAggregations.from(
+                        List.of(createSingleMetricAgg(aggName, 28.99), createSingleMetricAgg(aggName2, -2.44, "-2.44F"))
+                    ),
+                    3L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID3", targetField2, "ID2_2"),
-                    aggTypedName,
-                    asMap("value", 12.55),
-                    aggTypedName2,
-                    asMap("value", Double.NaN, "value_as_string", "NaN"),
-                    DOC_COUNT,
-                    4
+                    InternalAggregations.from(
+                        List.of(createSingleMetricAgg(aggName, 12.55), createSingleMetricAgg(aggName2, Double.NaN, "NaN"))
+                    ),
+                    4L
                 )
             )
         );
 
-        List<Map<String, Object>> expected = asList(
+        List<Map<String, Object>> expected = List.of(
             asMap(targetField, "ID1", targetField2, "ID1_2", aggName, 42.33, aggName2, "9.9F"),
             asMap(targetField, "ID1", targetField2, "ID2_2", aggName, 8.4, aggName2, "222.33F"),
             asMap(targetField, "ID2", targetField2, "ID1_2", aggName, 28.99, aggName2, "-2.44F"),
             asMap(targetField, "ID3", targetField2, "ID2_2", aggName, 12.55, aggName2, null)
         );
-        Map<String, String> fieldTypeMap = asStringMap(
+        Map<String, String> fieldTypeMap = Map.of(
             aggName,
             "double",
             aggName2,
@@ -446,7 +368,7 @@ public class AggregationResultUtilsTests extends ESTestCase {
             targetField2,
             "keyword"
         );
-        executeTest(groupBy, aggregationBuilders, Collections.emptyList(), input, fieldTypeMap, expected, 10);
+        executeTest(groupBy, aggregationBuilders, List.of(), input, fieldTypeMap, expected, 10);
     }
 
     public void testExtractCompositeAggregationResultsWithDynamicType() throws IOException {
@@ -468,49 +390,42 @@ public class AggregationResultUtilsTests extends ESTestCase {
             }""", targetField, targetField2));
 
         String aggName = randomAlphaOfLengthBetween(5, 10);
-        String aggTypedName = "scripted_metric#" + aggName;
 
-        Collection<AggregationBuilder> aggregationBuilders = asList(AggregationBuilders.scriptedMetric(aggName));
+        List<AggregationBuilder> aggregationBuilders = List.of(AggregationBuilders.scriptedMetric(aggName));
 
-        Map<String, Object> input = asMap(
-            "buckets",
-            asList(
-                asMap(
-                    KEY,
+        InternalComposite input = createComposite(
+            List.of(
+                createInternalCompositeBucket(
                     asMap(targetField, "ID1", targetField2, "ID1_2"),
-                    aggTypedName,
-                    asMap("value", asMap("field", 123.0)),
-                    DOC_COUNT,
-                    1
+                    InternalAggregations.from(List.of(createScriptedMetric(aggName, asMap("field", 123.0)))),
+                    1L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID1", targetField2, "ID2_2"),
-                    aggTypedName,
-                    asMap("value", asMap("field", 1.0)),
-                    DOC_COUNT,
-                    2
+                    InternalAggregations.from(List.of(createScriptedMetric(aggName, asMap("field", 1.0)))),
+                    2L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID2", targetField2, "ID1_2"),
-                    aggTypedName,
-                    asMap("value", asMap("field", 2.13)),
-                    DOC_COUNT,
-                    3
+                    InternalAggregations.from(List.of(createScriptedMetric(aggName, asMap("field", 2.13)))),
+                    3L
                 ),
-                asMap(KEY, asMap(targetField, "ID3", targetField2, "ID2_2"), aggTypedName, asMap("value", null), DOC_COUNT, 0)
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID3", targetField2, "ID2_2"),
+                    InternalAggregations.from(List.of(createScriptedMetric(aggName, null))),
+                    0L
+                )
             )
         );
 
-        List<Map<String, Object>> expected = asList(
+        List<Map<String, Object>> expected = List.of(
             asMap(targetField, "ID1", targetField2, "ID1_2", aggName, asMap("field", 123.0)),
             asMap(targetField, "ID1", targetField2, "ID2_2", aggName, asMap("field", 1.0)),
             asMap(targetField, "ID2", targetField2, "ID1_2", aggName, asMap("field", 2.13)),
             asMap(targetField, "ID3", targetField2, "ID2_2", aggName, null)
         );
-        Map<String, String> fieldTypeMap = asStringMap(targetField, "keyword", targetField2, "keyword");
-        executeTest(groupBy, aggregationBuilders, Collections.emptyList(), input, fieldTypeMap, expected, 6);
+        Map<String, String> fieldTypeMap = Map.of(targetField, "keyword", targetField2, "keyword");
+        executeTest(groupBy, aggregationBuilders, List.of(), input, fieldTypeMap, expected, 6);
     }
 
     public void testExtractCompositeAggregationResultsWithPipelineAggregation() throws IOException {
@@ -532,72 +447,53 @@ public class AggregationResultUtilsTests extends ESTestCase {
             }""", targetField, targetField2));
 
         String aggName = randomAlphaOfLengthBetween(5, 10);
-        String aggTypedName = "avg#" + aggName;
         String pipelineAggName = randomAlphaOfLengthBetween(5, 10) + "_2";
-        String pipelineAggTypedName = "bucket_script#" + pipelineAggName;
 
-        Collection<AggregationBuilder> aggregationBuilders = asList(AggregationBuilders.scriptedMetric(aggName));
-        Collection<PipelineAggregationBuilder> pipelineAggregationBuilders = asList(
-            PipelineAggregatorBuilders.bucketScript(
-                pipelineAggName,
-                Collections.singletonMap("param_1", aggName),
-                new Script("return params.param_1")
-            )
+        List<AggregationBuilder> aggregationBuilders = List.of(AggregationBuilders.scriptedMetric(aggName));
+        List<PipelineAggregationBuilder> pipelineAggregationBuilders = List.of(
+            PipelineAggregatorBuilders.bucketScript(pipelineAggName, Map.of("param_1", aggName), new Script("return params.param_1"))
         );
 
-        Map<String, Object> input = asMap(
-            "buckets",
-            asList(
-                asMap(
-                    KEY,
+        InternalComposite input = createComposite(
+            List.of(
+                createInternalCompositeBucket(
                     asMap(targetField, "ID1", targetField2, "ID1_2"),
-                    aggTypedName,
-                    asMap("value", 123.0),
-                    pipelineAggTypedName,
-                    asMap("value", 123.0),
-                    DOC_COUNT,
-                    1
+                    InternalAggregations.from(
+                        List.of(createSingleMetricAgg(aggName, 123.0), createSingleMetricAgg(pipelineAggName, 123.0, "123.0"))
+                    ),
+                    1L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID1", targetField2, "ID2_2"),
-                    aggTypedName,
-                    asMap("value", 1.0),
-                    pipelineAggTypedName,
-                    asMap("value", 1.0),
-                    DOC_COUNT,
-                    2
+                    InternalAggregations.from(
+                        List.of(createSingleMetricAgg(aggName, 1.0), createSingleMetricAgg(pipelineAggName, 1.0, "1.0"))
+                    ),
+                    2L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID2", targetField2, "ID1_2"),
-                    aggTypedName,
-                    asMap("value", 2.13),
-                    pipelineAggTypedName,
-                    asMap("value", 2.13),
-                    DOC_COUNT,
-                    3
+                    InternalAggregations.from(
+                        List.of(createSingleMetricAgg(aggName, 2.13), createSingleMetricAgg(pipelineAggName, 2.13, "2.13"))
+                    ),
+                    3L
                 ),
-                asMap(
-                    KEY,
+                createInternalCompositeBucket(
                     asMap(targetField, "ID3", targetField2, "ID2_2"),
-                    aggTypedName,
-                    asMap("value", 12.0),
-                    pipelineAggTypedName,
-                    asMap("value", Double.NaN),
-                    DOC_COUNT,
-                    4
+                    InternalAggregations.from(
+                        List.of(createSingleMetricAgg(aggName, 12.0), createSingleMetricAgg(pipelineAggName, Double.NaN, "NaN"))
+                    ),
+                    4L
                 )
             )
         );
 
-        List<Map<String, Object>> expected = asList(
+        List<Map<String, Object>> expected = List.of(
             asMap(targetField, "ID1", targetField2, "ID1_2", aggName, 123.0, pipelineAggName, 123.0),
             asMap(targetField, "ID1", targetField2, "ID2_2", aggName, 1.0, pipelineAggName, 1.0),
             asMap(targetField, "ID2", targetField2, "ID1_2", aggName, 2.13, pipelineAggName, 2.13),
             asMap(targetField, "ID3", targetField2, "ID2_2", aggName, 12.0, pipelineAggName, null)
         );
-        Map<String, String> fieldTypeMap = asStringMap(targetField, "keyword", targetField2, "keyword", aggName, "double");
+        Map<String, String> fieldTypeMap = Map.of(targetField, "keyword", targetField2, "keyword", aggName, "double");
         executeTest(groupBy, aggregationBuilders, pipelineAggregationBuilders, input, fieldTypeMap, expected, 10);
     }
 
@@ -620,37 +516,67 @@ public class AggregationResultUtilsTests extends ESTestCase {
             }""", targetField, targetField2));
 
         String aggName = randomAlphaOfLengthBetween(5, 10);
-        String aggTypedName = "avg#" + aggName;
-        Collection<AggregationBuilder> aggregationBuilders = Collections.singletonList(AggregationBuilders.avg(aggName));
+        List<AggregationBuilder> aggregationBuilders = List.of(AggregationBuilders.avg(aggName));
 
-        Map<String, Object> inputFirstRun = asMap(
-            "buckets",
-            asList(
-                asMap(KEY, asMap(targetField, "ID1", targetField2, "ID1_2"), aggTypedName, asMap("value", 42.33), DOC_COUNT, 1),
-                asMap(KEY, asMap(targetField, "ID1", targetField2, "ID2_2"), aggTypedName, asMap("value", 8.4), DOC_COUNT, 2),
-                asMap(KEY, asMap(targetField, "ID2", targetField2, "ID1_2"), aggTypedName, asMap("value", 28.99), DOC_COUNT, 3),
-                asMap(KEY, asMap(targetField, "ID3", targetField2, "ID2_2"), aggTypedName, asMap("value", 12.55), DOC_COUNT, 4)
+        InternalComposite inputFirstRun = createComposite(
+            List.of(
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID1", targetField2, "ID1_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 42.33))),
+                    1L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID1", targetField2, "ID2_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 8.4))),
+                    2L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID2", targetField2, "ID1_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 28.99))),
+                    3L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID3", targetField2, "ID2_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 12.55))),
+                    4L
+                )
             )
         );
 
-        Map<String, Object> inputSecondRun = asMap(
-            "buckets",
-            asList(
-                asMap(KEY, asMap(targetField, "ID1", targetField2, "ID1_2"), aggTypedName, asMap("value", 433.33), DOC_COUNT, 12),
-                asMap(KEY, asMap(targetField, "ID1", targetField2, "ID2_2"), aggTypedName, asMap("value", 83.4), DOC_COUNT, 32),
-                asMap(KEY, asMap(targetField, "ID2", targetField2, "ID1_2"), aggTypedName, asMap("value", 21.99), DOC_COUNT, 2),
-                asMap(KEY, asMap(targetField, "ID3", targetField2, "ID2_2"), aggTypedName, asMap("value", 122.55), DOC_COUNT, 44)
+        InternalComposite inputSecondRun = createComposite(
+            List.of(
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID1", targetField2, "ID1_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 433.33))),
+                    12L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID1", targetField2, "ID2_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 83.4))),
+                    32L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID2", targetField2, "ID1_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 21.99))),
+                    2L
+                ),
+                createInternalCompositeBucket(
+                    asMap(targetField, "ID3", targetField2, "ID2_2"),
+                    InternalAggregations.from(List.of(createSingleMetricAgg(aggName, 122.55))),
+                    44L
+                )
             )
         );
+
         TransformIndexerStats stats = new TransformIndexerStats();
         TransformProgress progress = new TransformProgress();
 
-        Map<String, String> fieldTypeMap = asStringMap(aggName, "double", targetField, "keyword", targetField2, "keyword");
+        Map<String, String> fieldTypeMap = Map.of(aggName, "double", targetField, "keyword", targetField2, "keyword");
 
         List<Map<String, Object>> resultFirstRun = runExtraction(
             groupBy,
             aggregationBuilders,
-            Collections.emptyList(),
+            List.of(),
             inputFirstRun,
             fieldTypeMap,
             stats,
@@ -659,7 +585,7 @@ public class AggregationResultUtilsTests extends ESTestCase {
         List<Map<String, Object>> resultSecondRun = runExtraction(
             groupBy,
             aggregationBuilders,
-            Collections.emptyList(),
+            List.of(),
             inputSecondRun,
             fieldTypeMap,
             stats,
@@ -724,116 +650,107 @@ public class AggregationResultUtilsTests extends ESTestCase {
         assertThat(exception.getMessage(), equalTo("mixed object types of nested and non-nested fields [foo.bar]"));
     }
 
-    public static NumericMetricsAggregation.SingleValue createSingleMetricAgg(String name, Double value, String valueAsString) {
-        NumericMetricsAggregation.SingleValue agg = mock(NumericMetricsAggregation.SingleValue.class);
+    public static InternalNumericMetricsAggregation.SingleValue createSingleMetricAgg(String name, Double value) {
+        InternalNumericMetricsAggregation.SingleValue agg = mock(InternalNumericMetricsAggregation.SingleValue.class);
         when(agg.value()).thenReturn(value);
-        when(agg.getValueAsString()).thenReturn(valueAsString);
         when(agg.getName()).thenReturn(name);
+        return agg;
+    }
+
+    public static InternalNumericMetricsAggregation.SingleValue createSingleMetricAgg(String name, Double value, String valueAsString) {
+        InternalNumericMetricsAggregation.SingleValue agg = createSingleMetricAgg(name, value);
+        when(agg.getValueAsString()).thenReturn(valueAsString);
         return agg;
     }
 
     public void testSingleValueAggExtractor() {
         Aggregation agg = createSingleMetricAgg("metric", Double.NaN, "NaN");
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("metric", "double"), ""), is(nullValue()));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of("metric", "double"), ""), is(nullValue()));
 
         agg = createSingleMetricAgg("metric", Double.POSITIVE_INFINITY, "NaN");
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("metric", "double"), ""), is(nullValue()));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of("metric", "double"), ""), is(nullValue()));
 
         agg = createSingleMetricAgg("metric", 100.0, "100.0");
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("metric", "double"), ""), equalTo(100.0));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of("metric", "double"), ""), equalTo(100.0));
 
         agg = createSingleMetricAgg("metric", 100.0, "one_hundred");
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("metric", "double"), ""), equalTo(100.0));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of("metric", "double"), ""), equalTo(100.0));
 
         agg = createSingleMetricAgg("metric", 100.0, "one_hundred");
-        assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("metric", "string"), ""),
-            equalTo("one_hundred")
-        );
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of("metric", "string"), ""), equalTo("one_hundred"));
 
         agg = createSingleMetricAgg("metric", 100.0, "one_hundred");
-        assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("metric", "unsigned_long"), ""),
-            equalTo(100L)
-        );
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of("metric", "unsigned_long"), ""), equalTo(100L));
     }
 
     public void testMultiValueAggExtractor() {
-        Aggregation agg = new TestMultiValueAggregation("mv_metric", Collections.singletonMap("ip", "192.168.1.1"));
-
+        Aggregation agg = new TestMultiValueAggregation("mv_metric", Map.of("ip", "192.168.1.1"));
         assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("mv_metric.ip", "ip"), ""),
-            equalTo(Collections.singletonMap("ip", "192.168.1.1"))
+            AggregationResultUtils.getExtractor(agg).value(agg, Map.of("mv_metric.ip", "ip"), ""),
+            equalTo(Map.of("ip", "192.168.1.1"))
         );
 
-        agg = new TestMultiValueAggregation("mv_metric", Collections.singletonMap("top_answer", "fortytwo"));
-
+        agg = new TestMultiValueAggregation("mv_metric", Map.of("top_answer", "fortytwo"));
         assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("mv_metric.written_answer", "written_answer"), ""),
-            equalTo(Collections.singletonMap("top_answer", "fortytwo"))
+            AggregationResultUtils.getExtractor(agg).value(agg, Map.of("mv_metric.written_answer", "written_answer"), ""),
+            equalTo(Map.of("top_answer", "fortytwo"))
         );
 
-        agg = new TestMultiValueAggregation("mv_metric", Map.of("ip", "192.168.1.1", "top_answer", "fortytwo"));
-
+        agg = new TestMultiValueAggregation("mv_metric", asOrderedMap("ip", "192.168.1.1", "top_answer", "fortytwo"));
         assertThat(
             AggregationResultUtils.getExtractor(agg).value(agg, Map.of("mv_metric.top_answer", "keyword", "mv_metric.ip", "ip"), ""),
-            equalTo(Map.of("top_answer", "fortytwo", "ip", "192.168.1.1"))
+            hasEqualEntriesInOrder(asOrderedMap("ip", "192.168.1.1", "top_answer", "fortytwo"))
         );
     }
 
     public void testNumericMultiValueAggExtractor() {
-        Aggregation agg = new TestNumericMultiValueAggregation(
-            "mv_metric",
-            Collections.singletonMap("approx_answer", Double.valueOf(42.2))
-        );
+        Aggregation agg = new TestNumericMultiValueAggregation("mv_metric", Map.of("approx_answer", 42.2));
 
         assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("mv_metric.approx_answer", "double"), ""),
-            equalTo(Collections.singletonMap("approx_answer", Double.valueOf(42.2)))
+            AggregationResultUtils.getExtractor(agg).value(agg, Map.of("mv_metric.approx_answer", "double"), ""),
+            equalTo(Map.of("approx_answer", Double.valueOf(42.2)))
         );
 
-        agg = new TestNumericMultiValueAggregation("mv_metric", Collections.singletonMap("exact_answer", Double.valueOf(42.0)));
+        agg = new TestNumericMultiValueAggregation("mv_metric", Map.of("exact_answer", 42.0));
 
         assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, Collections.singletonMap("mv_metric.exact_answer", "long"), ""),
-            equalTo(Collections.singletonMap("exact_answer", Long.valueOf(42)))
+            AggregationResultUtils.getExtractor(agg).value(agg, Map.of("mv_metric.exact_answer", "long"), ""),
+            equalTo(Map.of("exact_answer", 42L))
         );
-
         agg = new TestNumericMultiValueAggregation(
             "mv_metric",
-            Map.of("approx_answer", Double.valueOf(42.2), "exact_answer", Double.valueOf(42.0))
+            asOrderedMap("approx_answer", Double.valueOf(42.2), "exact_answer", Double.valueOf(42.0))
         );
-
         assertThat(
             AggregationResultUtils.getExtractor(agg)
                 .value(agg, Map.of("mv_metric.approx_answer", "double", "mv_metric.exact_answer", "long"), ""),
-            equalTo(Map.of("approx_answer", Double.valueOf(42.2), "exact_answer", Long.valueOf(42)))
+            hasEqualEntriesInOrder(asOrderedMap("approx_answer", Double.valueOf(42.2), "exact_answer", Long.valueOf(42)))
         );
-
         assertThat(
             AggregationResultUtils.getExtractor(agg)
                 .value(agg, Map.of("filter.mv_metric.approx_answer", "double", "filter.mv_metric.exact_answer", "long"), "filter"),
-            equalTo(Map.of("approx_answer", Double.valueOf(42.2), "exact_answer", Long.valueOf(42)))
+            hasEqualEntriesInOrder(asOrderedMap("approx_answer", 42.2, "exact_answer", Long.valueOf(42)))
         );
     }
 
-    private ScriptedMetric createScriptedMetric(Object returnValue) {
-        ScriptedMetric agg = mock(ScriptedMetric.class);
+    private InternalScriptedMetric createScriptedMetric(String name, Object returnValue) {
+        InternalScriptedMetric agg = mock(InternalScriptedMetric.class);
+        when(agg.getName()).thenReturn(name);
         when(agg.aggregation()).thenReturn(returnValue);
         return agg;
     }
 
     @SuppressWarnings("unchecked")
     public void testScriptedMetricAggExtractor() {
-        Aggregation agg = createScriptedMetric(null);
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""), is(nullValue()));
+        Aggregation agg = createScriptedMetric("name", null);
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""), is(nullValue()));
 
-        agg = createScriptedMetric(Collections.singletonList("values"));
-        Object val = AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), "");
+        agg = createScriptedMetric("name", List.of("values"));
+        Object val = AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), "");
         assertThat((List<String>) val, hasItem("values"));
 
-        agg = createScriptedMetric(Collections.singletonMap("key", 100));
-        val = AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), "");
+        agg = createScriptedMetric("name", Map.of("key", 100));
+        val = AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), "");
         assertThat(((Map<String, Object>) val).get("key"), equalTo(100));
     }
 
@@ -846,13 +763,13 @@ public class AggregationResultUtilsTests extends ESTestCase {
 
     public void testGeoCentroidAggExtractor() {
         Aggregation agg = createGeoCentroid(null, 0);
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""), is(nullValue()));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""), is(nullValue()));
 
         agg = createGeoCentroid(new GeoPoint(100.0, 101.0), 0);
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""), is(nullValue()));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""), is(nullValue()));
 
         agg = createGeoCentroid(new GeoPoint(100.0, 101.0), randomIntBetween(1, 100));
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""), equalTo("100.0, 101.0"));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""), equalTo("100.0, 101.0"));
     }
 
     private GeoBounds createGeoBounds(GeoPoint tl, GeoPoint br) {
@@ -866,20 +783,20 @@ public class AggregationResultUtilsTests extends ESTestCase {
     public void testGeoBoundsAggExtractor() {
         final int numberOfRuns = 25;
         Aggregation agg = createGeoBounds(null, new GeoPoint(100.0, 101.0));
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""), is(nullValue()));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""), is(nullValue()));
 
         agg = createGeoBounds(new GeoPoint(100.0, 101.0), null);
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""), is(nullValue()));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""), is(nullValue()));
 
         String type = "point";
         for (int i = 0; i < numberOfRuns; i++) {
-            Map<String, Object> expectedObject = new HashMap<>();
-            expectedObject.put("type", type);
             double lat = randomDoubleBetween(-90.0, 90.0, false);
             double lon = randomDoubleBetween(-180.0, 180.0, false);
-            expectedObject.put("coordinates", asList(lon, lat));
             agg = createGeoBounds(new GeoPoint(lat, lon), new GeoPoint(lat, lon));
-            assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""), equalTo(expectedObject));
+            assertThat(
+                AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""),
+                hasEqualEntriesInOrder(asOrderedMap("type", type, "coordinates", List.of(lon, lat)))
+            );
         }
 
         type = "linestring";
@@ -894,7 +811,7 @@ public class AggregationResultUtilsTests extends ESTestCase {
                 lon2 = randomDoubleBetween(-180.0, 180.0, false);
             }
             agg = createGeoBounds(new GeoPoint(lat, lon), new GeoPoint(lat2, lon2));
-            Object val = AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), "");
+            Object val = AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), "");
             Map<String, Object> geoJson = (Map<String, Object>) val;
             assertThat(geoJson.get("type"), equalTo(type));
             List<Double[]> coordinates = (List<Double[]>) geoJson.get("coordinates");
@@ -918,18 +835,18 @@ public class AggregationResultUtilsTests extends ESTestCase {
                 lon2 = randomDoubleBetween(-180.0, 180.0, false);
             }
             agg = createGeoBounds(new GeoPoint(lat, lon), new GeoPoint(lat2, lon2));
-            Object val = AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), "");
+            Object val = AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), "");
             Map<String, Object> geoJson = (Map<String, Object>) val;
             assertThat(geoJson.get("type"), equalTo(type));
             List<List<Double[]>> coordinates = (List<List<Double[]>>) geoJson.get("coordinates");
             assertThat(coordinates.size(), equalTo(1));
             assertThat(coordinates.get(0).size(), equalTo(5));
-            List<List<Double>> expected = asList(
-                asList(lon, lat),
-                asList(lon2, lat),
-                asList(lon2, lat2),
-                asList(lon, lat2),
-                asList(lon, lat)
+            List<List<Double>> expected = List.of(
+                List.of(lon, lat),
+                List.of(lon2, lat),
+                List.of(lon2, lat2),
+                List.of(lon, lat2),
+                List.of(lon, lat)
             );
             for (int j = 0; j < 5; j++) {
                 Double[] coordinate = coordinates.get(0).get(j);
@@ -938,6 +855,28 @@ public class AggregationResultUtilsTests extends ESTestCase {
                 assertThat(coordinate[1], equalTo(expected.get(j).get(1)));
             }
         }
+    }
+
+    private static InternalComposite createComposite(List<InternalComposite.InternalBucket> buckets) {
+        InternalComposite composite = mock(InternalComposite.class);
+
+        when(composite.getBuckets()).thenReturn(buckets);
+        when(composite.getName()).thenReturn("my_feature");
+        Map<String, Object> afterKey = buckets.get(buckets.size() - 1).getKey();
+        when(composite.afterKey()).thenReturn(afterKey);
+        return composite;
+    }
+
+    private static InternalComposite.InternalBucket createInternalCompositeBucket(
+        Map<String, Object> key,
+        InternalAggregations aggregations,
+        long docCount
+    ) {
+        InternalComposite.InternalBucket bucket = mock(InternalComposite.InternalBucket.class);
+        when(bucket.getDocCount()).thenReturn(docCount);
+        when(bucket.getAggregations()).thenReturn(aggregations);
+        when(bucket.getKey()).thenReturn(key);
+        return bucket;
     }
 
     public static Percentiles createPercentilesAgg(String name, List<Percentile> percentiles) {
@@ -951,17 +890,20 @@ public class AggregationResultUtilsTests extends ESTestCase {
     public void testPercentilesAggExtractor() {
         Aggregation agg = createPercentilesAgg(
             "p_agg",
-            asList(new Percentile(1, 0), new Percentile(50, 22.2), new Percentile(99, 43.3), new Percentile(99.5, 100.3))
+            List.of(new Percentile(1, 0), new Percentile(50, 22.2), new Percentile(99, 43.3), new Percentile(99.5, 100.3))
         );
         assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""),
-            equalTo(asMap("1", 0.0, "50", 22.2, "99", 43.3, "99_5", 100.3))
+            AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""),
+            hasEqualEntriesInOrder(asOrderedMap("1", 0.0, "50", 22.2, "99", 43.3, "99_5", 100.3))
         );
     }
 
     public void testPercentilesAggExtractorNaN() {
-        Aggregation agg = createPercentilesAgg("p_agg", asList(new Percentile(1, Double.NaN), new Percentile(50, Double.NaN)));
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""), equalTo(asMap("1", null, "50", null)));
+        Aggregation agg = createPercentilesAgg("p_agg", List.of(new Percentile(1, Double.NaN), new Percentile(50, Double.NaN)));
+        assertThat(
+            AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""),
+            hasEqualEntriesInOrder(asOrderedMap("1", null, "50", null))
+        );
     }
 
     @SuppressWarnings("unchecked")
@@ -975,21 +917,21 @@ public class AggregationResultUtilsTests extends ESTestCase {
     public void testRangeAggExtractor() {
         Aggregation agg = createRangeAgg(
             "p_agg",
-            asList(
-                new InternalRange.Bucket(null, Double.NEGATIVE_INFINITY, 10.5, 10, InternalAggregations.EMPTY, false, DocValueFormat.RAW),
-                new InternalRange.Bucket(null, 10.5, 19.5, 30, InternalAggregations.EMPTY, false, DocValueFormat.RAW),
-                new InternalRange.Bucket(null, 19.5, 200, 30, InternalAggregations.EMPTY, false, DocValueFormat.RAW),
-                new InternalRange.Bucket(null, 20, Double.POSITIVE_INFINITY, 0, InternalAggregations.EMPTY, false, DocValueFormat.RAW),
-                new InternalRange.Bucket(null, -10, -5, 0, InternalAggregations.EMPTY, false, DocValueFormat.RAW),
-                new InternalRange.Bucket(null, -11.0, -6.0, 0, InternalAggregations.EMPTY, false, DocValueFormat.RAW),
-                new InternalRange.Bucket(null, -11.0, 0, 0, InternalAggregations.EMPTY, false, DocValueFormat.RAW),
-                new InternalRange.Bucket("custom-0", 0, 10, 777, InternalAggregations.EMPTY, false, DocValueFormat.RAW)
+            List.of(
+                new InternalRange.Bucket(null, Double.NEGATIVE_INFINITY, 10.5, 10, InternalAggregations.EMPTY, DocValueFormat.RAW),
+                new InternalRange.Bucket(null, 10.5, 19.5, 30, InternalAggregations.EMPTY, DocValueFormat.RAW),
+                new InternalRange.Bucket(null, 19.5, 200, 30, InternalAggregations.EMPTY, DocValueFormat.RAW),
+                new InternalRange.Bucket(null, 20, Double.POSITIVE_INFINITY, 0, InternalAggregations.EMPTY, DocValueFormat.RAW),
+                new InternalRange.Bucket(null, -10, -5, 0, InternalAggregations.EMPTY, DocValueFormat.RAW),
+                new InternalRange.Bucket(null, -11.0, -6.0, 0, InternalAggregations.EMPTY, DocValueFormat.RAW),
+                new InternalRange.Bucket(null, -11.0, 0, 0, InternalAggregations.EMPTY, DocValueFormat.RAW),
+                new InternalRange.Bucket("custom-0", 0, 10, 777, InternalAggregations.EMPTY, DocValueFormat.RAW)
             )
         );
         assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""),
-            equalTo(
-                asMap(
+            AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""),
+            hasEqualEntriesInOrder(
+                asOrderedMap(
                     "*-10_5",
                     10L,
                     "10_5-19_5",
@@ -1011,14 +953,66 @@ public class AggregationResultUtilsTests extends ESTestCase {
         );
     }
 
-    public static SingleBucketAggregation createSingleBucketAgg(String name, long docCount, Aggregation... subAggregations) {
-        SingleBucketAggregation agg = mock(SingleBucketAggregation.class);
+    private static <T> Matcher<T> hasEqualEntriesInOrder(Map<String, Object> expected) {
+        return new BaseMatcher<T>() {
+            @Override
+            public boolean matches(Object o) {
+                if (o instanceof Map) {
+                    return matches((Map<?, ?>) o);
+                }
+                return false;
+            }
+
+            public boolean matches(Map<?, ?> o) {
+                var expectedEntries = expected.entrySet().iterator();
+                var actualEntries = o.entrySet().iterator();
+                while (expectedEntries.hasNext() && actualEntries.hasNext()) {
+                    var expectedEntry = expectedEntries.next();
+                    var actualEntry = actualEntries.next();
+                    assertThat(
+                        "Entry is out of order. Expected order: "
+                            + mapToString(expected, expectedEntry)
+                            + ", Actual order: "
+                            + mapToString(o, actualEntry),
+                        actualEntry,
+                        equalTo(expectedEntry)
+                    );
+                }
+                return expectedEntries.hasNext() == false && actualEntries.hasNext() == false;
+            }
+
+            private String mapToString(Map<?, ?> map, Object node) {
+                return map.entrySet().stream().map(entry -> {
+                    var entryAsString = entry.getKey() + "=" + entry.getValue();
+                    if (node == entry) {
+                        return "<<" + entryAsString + ">>";
+                    }
+                    return entryAsString;
+                }).collect(Collectors.joining(", ", "{", "}"));
+            }
+
+            @Override
+            public void describeTo(Description description) {
+                description.appendText(
+                    expected.entrySet()
+                        .stream()
+                        .map(entry -> entry.getKey() + "=" + entry.getValue())
+                        .collect(Collectors.joining(", ", "{", "}"))
+                );
+            }
+        };
+    }
+
+    public static InternalSingleBucketAggregation createSingleBucketAgg(
+        String name,
+        long docCount,
+        InternalAggregation... subAggregations
+    ) {
+        InternalSingleBucketAggregation agg = mock(InternalSingleBucketAggregation.class);
         when(agg.getDocCount()).thenReturn(docCount);
         when(agg.getName()).thenReturn(name);
         if (subAggregations != null) {
-            org.elasticsearch.search.aggregations.Aggregations subAggs = new org.elasticsearch.search.aggregations.Aggregations(
-                asList(subAggregations)
-            );
+            InternalAggregations subAggs = InternalAggregations.from(List.of(subAggregations));
             when(agg.getAggregations()).thenReturn(subAggs);
         } else {
             when(agg.getAggregations()).thenReturn(null);
@@ -1028,13 +1022,10 @@ public class AggregationResultUtilsTests extends ESTestCase {
 
     public void testSingleBucketAggExtractor() {
         Aggregation agg = createSingleBucketAgg("sba", 42L);
-        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""), equalTo(42L));
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""), equalTo(42L));
 
         agg = createSingleBucketAgg("sba1", 42L, createSingleMetricAgg("sub1", 100.0, "100.0"));
-        assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, Collections.emptyMap(), ""),
-            equalTo(Collections.singletonMap("sub1", 100.0))
-        );
+        assertThat(AggregationResultUtils.getExtractor(agg).value(agg, Map.of(), ""), equalTo(Map.of("sub1", 100.0)));
 
         agg = createSingleBucketAgg(
             "sba2",
@@ -1043,8 +1034,8 @@ public class AggregationResultUtilsTests extends ESTestCase {
             createSingleMetricAgg("sub2", 33.33, "thirty_three")
         );
         assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, asStringMap("sba2.sub1", "long", "sba2.sub2", "float"), ""),
-            equalTo(asMap("sub1", 100L, "sub2", 33.33))
+            AggregationResultUtils.getExtractor(agg).value(agg, Map.of("sba2.sub1", "long", "sba2.sub2", "float"), ""),
+            hasEqualEntriesInOrder(asOrderedMap("sub1", 100L, "sub2", 33.33))
         );
 
         agg = createSingleBucketAgg(
@@ -1055,8 +1046,8 @@ public class AggregationResultUtilsTests extends ESTestCase {
             createSingleBucketAgg("sub3", 42L)
         );
         assertThat(
-            AggregationResultUtils.getExtractor(agg).value(agg, asStringMap("sba3.sub1", "long", "sba3.sub2", "double"), ""),
-            equalTo(asMap("sub1", 100L, "sub2", 33.33, "sub3", 42L))
+            AggregationResultUtils.getExtractor(agg).value(agg, Map.of("sba3.sub1", "long", "sba3.sub2", "double"), ""),
+            hasEqualEntriesInOrder(asOrderedMap("sub1", 100L, "sub2", 33.33, "sub3", 42L))
         );
 
         agg = createSingleBucketAgg(
@@ -1068,8 +1059,8 @@ public class AggregationResultUtilsTests extends ESTestCase {
         );
         assertThat(
             AggregationResultUtils.getExtractor(agg)
-                .value(agg, asStringMap("sba4.sub3.subsub1", "double", "sba4.sub2", "float", "sba4.sub1", "long"), ""),
-            equalTo(asMap("sub1", 100L, "sub2", 33.33, "sub3", asMap("subsub1", 11.1)))
+                .value(agg, Map.of("sba4.sub3.subsub1", "double", "sba4.sub2", "float", "sba4.sub1", "long"), ""),
+            hasEqualEntriesInOrder(asOrderedMap("sub1", 100L, "sub2", 33.33, "sub3", asMap("subsub1", 11.1)))
         );
     }
 
@@ -1081,6 +1072,7 @@ public class AggregationResultUtilsTests extends ESTestCase {
         assertThat(extractor.value(1577836800000L, "date"), equalTo("2020-01-01T00:00:00.000Z"));
         assertThat(extractor.value(1577836800000L, "date_nanos"), equalTo("2020-01-01T00:00:00.000Z"));
         assertThat(extractor.value(1577836800000L, "long"), equalTo(1577836800000L));
+        assertThat(extractor.value(1577836800000L, null), equalTo(1577836800000L));
     }
 
     public void testDatesAsEpochBucketKeyExtractor() {
@@ -1091,21 +1083,20 @@ public class AggregationResultUtilsTests extends ESTestCase {
         assertThat(extractor.value(1577836800000L, "date"), equalTo(1577836800000L));
         assertThat(extractor.value(1577836800000L, "date_nanos"), equalTo(1577836800000L));
         assertThat(extractor.value(1577836800000L, "long"), equalTo(1577836800000L));
+        assertThat(extractor.value(1577836800000L, null), equalTo(1577836800000L));
     }
 
     private void executeTest(
         GroupConfig groups,
-        Collection<AggregationBuilder> aggregationBuilders,
-        Collection<PipelineAggregationBuilder> pipelineAggregationBuilders,
-        Map<String, Object> input,
+        List<AggregationBuilder> aggregationBuilders,
+        List<PipelineAggregationBuilder> pipelineAggregationBuilders,
+        InternalComposite input,
         Map<String, String> fieldTypeMap,
         List<Map<String, Object>> expected,
         long expectedDocCounts
-    ) throws IOException {
+    ) {
         TransformIndexerStats stats = new TransformIndexerStats();
         TransformProgress progress = new TransformProgress();
-        XContentBuilder builder = XContentFactory.contentBuilder(randomFrom(XContentType.values()));
-        builder.map(input);
 
         List<Map<String, Object>> result = runExtraction(
             groups,
@@ -1129,30 +1120,23 @@ public class AggregationResultUtilsTests extends ESTestCase {
 
     private List<Map<String, Object>> runExtraction(
         GroupConfig groups,
-        Collection<AggregationBuilder> aggregationBuilders,
-        Collection<PipelineAggregationBuilder> pipelineAggregationBuilders,
-        Map<String, Object> input,
+        List<AggregationBuilder> aggregationBuilders,
+        List<PipelineAggregationBuilder> pipelineAggregationBuilders,
+        InternalComposite input,
         Map<String, String> fieldTypeMap,
         TransformIndexerStats stats,
         TransformProgress progress
-    ) throws IOException {
-
-        XContentBuilder builder = XContentFactory.contentBuilder(randomFrom(XContentType.values()));
-        builder.map(input);
-
-        try (XContentParser parser = createParser(builder)) {
-            CompositeAggregation agg = ParsedComposite.fromXContent(parser, "my_feature");
-            return AggregationResultUtils.extractCompositeAggregationResults(
-                agg,
-                groups,
-                aggregationBuilders,
-                pipelineAggregationBuilders,
-                fieldTypeMap,
-                stats,
-                progress,
-                true
-            ).collect(Collectors.toList());
-        }
+    ) {
+        return AggregationResultUtils.extractCompositeAggregationResults(
+            input,
+            groups,
+            aggregationBuilders,
+            pipelineAggregationBuilders,
+            fieldTypeMap,
+            stats,
+            progress,
+            true
+        ).collect(Collectors.toList());
     }
 
     private GroupConfig parseGroupConfig(String json) throws IOException {
@@ -1162,22 +1146,27 @@ public class AggregationResultUtilsTests extends ESTestCase {
     }
 
     static Map<String, Object> asMap(Object... fields) {
+        return asMap(HashMap::new, fields);
+    }
+
+    static Map<String, Object> asOrderedMap(Object... fields) {
+        return asMap(LinkedHashMap::new, fields);
+    }
+
+    static Map<String, Object> asMap(Supplier<Map<String, Object>> mapFactory, Object... fields) {
         assert fields.length % 2 == 0;
-        final Map<String, Object> map = new HashMap<>();
+        var map = mapFactory.get();
         for (int i = 0; i < fields.length; i += 2) {
-            String field = (String) fields[i];
+            var field = (String) fields[i];
             map.put(field, fields[i + 1]);
         }
         return map;
     }
 
-    static Map<String, String> asStringMap(String... strings) {
-        assert strings.length % 2 == 0;
-        final Map<String, String> map = new HashMap<>();
-        for (int i = 0; i < strings.length; i += 2) {
-            String field = strings[i];
-            map.put(field, strings[i + 1]);
-        }
+    static <K, V> Map<K, V> asOrderedMap(K k1, V v1, K k2, V v2) {
+        var map = new LinkedHashMap<K, V>();
+        map.put(k1, v1);
+        map.put(k2, v2);
         return map;
     }
 }
